# rust-python-bindings

./: .gitignore  .gitmodules  index.ipynb
.github/workflows/: build.yml
native-template/: .gitignore  Cargo.toml  pyproject.toml
native-template/python/native_template/: __init__.py
native-template/src/: lib.rs
numpy-template/: Cargo.toml  pyproject.toml
numpy-template/python/numpy_template/: __init__.py
numpy-template/src/: lib.rs
torch-template/: Cargo.toml  MANIFEST.in  build.rs  pyproject.toml  test.ipynb
torch-template/python/torch_template/: __init__.py
torch-template/src/: lib.rs
