[package]
name = "torch-template"
version = "0.1.0"
authors = ["Simon Bertrand <simonbertrand.contact@gmail.com>"]
edition = "2021"

[lib]
name = "torch_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
# pyo3-tch = "0.14.0"
pyo3-tch = { path = "../debug/pyo3-tch", version = "0.15.0" }
