[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-template"
version = "1.0"
dependencies = ["torch==2.1.0"]



[tool.setuptools.packages]
# Pure Python packages/modules
find = { where = ["python"] }

[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into Python package
target = "torch_template.torch_lib"  # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
                             # but you can add a prefix to nest it inside of a Python package.
py-limited-api = "auto"  # Default value, can be omitted
binding = "PyO3"  # Default value, can be omitted
path = "Cargo.toml"      # Default value, can be omitted

