[build-system]
requires = ["setuptools", "setuptools-rust", "torch==2.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-template"
version = "1.0"
dependencies = ["torch==2.1.0"]


[tool.setuptools.packages]
find = { where = ["python"] }

[[tool.setuptools-rust.ext-modules]]
target = "torch_template.torch_lib"  # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
py-limited-api = "auto" 
binding = "PyO3" 
path = "Cargo.toml"

